--- a/css/index.css
+++ b/css/index.css
@@ -16,16 +16,7 @@ ul{
     top: 0;
     width:100%;
     height: 80px;
-    background: #aaa;
     z-index: 10;
-}
-.mobile_gnb_wrap>a{
-    position: absolute;
-    width:80px;
-    right:10px;
-}
-#menu_icon img{
-    width:80px;
 }
 .mobile_gnb_nav{
     position: absolute;
@@ -33,7 +24,11 @@ ul{
     top:80px;
     width:100%;
     font-size: 1.2em;
-    background: #aaa;
+    background: rgb(59,50,50);
+}
+.mobile_gnb_nav ul{
+    display:flex;
+    justify-content:space-around;
 }
 .mobile_gnb_nav a, .mobile_gnb_nav a:visited{
     text-decoration: none;
