--- a/css/index-4.css
+++ b/css/index-4.css
@@ -24,7 +24,7 @@ body{
     position: absolute;
     top:-500px;
     background-color: #fff;
-    z-index: ;
+    z-index: 10;
 }
 #log_f fieldset{
     width:240px;
